--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,6 +58,19 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    flavorDimensions "default"
+
+    productFlavors {
+        dev {
+            dimension "default"
+            applicationIdSuffix ".dev"
+            versionNameSuffix "-dev"
+        }
+        prod {
+            dimension "default"
+            resValue "string", "com.edu4tech.android.apps.influencerapp", "Influencer App"
+        }
+    }
 }
 
 flutter {
