--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   flutter_gen_runner: ^5.3.2
   flutter_bloc: ^8.1.3
   dots_indicator: ^3.0.0
+  auto_route: ^7.8.4
+  auto_route_generator: ^7.3.2
+  flutter_riverpod: ^2.4.5
+  flutter_launcher_icons: ^0.13.1
 
   
 
