--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,20 +7,20 @@
         
         {
             "name": "Influencer App",
-            "program": "lib/app/app.dart",
+            "program": "lib/flavors/main_dev.dart",
             "request": "launch",
             "type": "dart"
         },
-        {
-            "name": "Influencer App (profile mode)",
-            "program": "lib/app/app.dart",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "profile"
-        },
+        // {
+        //     "name": "Influencer App (profile mode)",
+        //     "program": "lib/flavors/main_dev.dart",
+        //     "request": "launch",
+        //     "type": "dart",
+        //     "flutterMode": "profile"
+        // },
         {
             "name": "Influencer App (release mode)",
-            "program": "lib/app/app.dart",
+            "program": "lib/flavors/main_prod.dart",
             "request": "launch",
             "type": "dart",
             "flutterMode": "release"
