--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   auto_route_generator: ^7.3.2
   flutter_riverpod: ^2.4.5
   flutter_launcher_icons: ^0.13.1
+  hive_generator: ^2.0.1
+  flavor: ^2.0.0
+  hive_flutter: ^1.1.0
+  
 
   
 
