--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
   hive_generator: ^2.0.1
   flavor: ^2.0.0
   hive_flutter: ^1.1.0
+  equatable: ^2.0.5
+  firebase_auth: ^4.12.0
+  cloud_firestore: ^4.12.1
+  bloc: ^8.1.2
   
 
   
