--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,15 @@ dependencies:
   firebase_auth: ^4.12.0
   cloud_firestore: ^4.12.1
   bloc: ^8.1.2
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
+  uuid: ^4.1.0
+  firebase_messaging: ^14.7.2
+  firebase_crashlytics: ^3.4.2
+  image_picker: ^1.0.4
+  fluttertoast: ^8.2.2
+  json_serializable: ^6.7.1
+  freezed: ^2.4.5
   
 
   
@@ -45,7 +54,7 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.0
-
+  
 
 flutter:
   generate: true
