--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,37 +18,41 @@ dependencies:
   
 
   cupertino_icons: ^1.0.2
+  #onboarding
+  dots_indicator: ^3.0.0
+  #firebase
   firebase_core: ^2.20.0
   firebase_storage: ^11.4.0
+  equatable: ^2.0.5
+  firebase_auth: ^4.12.0
+  cloud_firestore: ^4.11.0
   flutter_gen: ^5.3.2
+  firebase_messaging: ^14.7.2
+  firebase_crashlytics: ^3.4.2
+
   build_runner: ^2.4.6
   flutter_gen_runner: ^5.3.2
   flutter_bloc: ^8.1.3
-  dots_indicator: ^3.0.0
+  #autoroute
   auto_route: ^7.8.4
   auto_route_generator: ^7.3.2
+
   flutter_riverpod: ^2.4.5
   flutter_launcher_icons: ^0.13.1
   hive_generator: ^2.0.1
   flavor: ^2.0.0
   hive_flutter: ^1.1.0
-  equatable: ^2.0.5
-  firebase_auth: ^4.12.0
-  cloud_firestore: ^4.11.0
+
   bloc: ^8.1.2
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   uuid: ^4.1.0
-  firebase_messaging: ^14.7.2
-  firebase_crashlytics: ^3.4.2
-  image_picker: ^1.0.4
+
+  # image_picker: ^1.0.4
   fluttertoast: ^8.2.2
   json_serializable: ^6.7.1
   freezed: ^2.4.5
-  
-  
 
-  
 
 dev_dependencies:
   flutter_test:
